[tool.poetry]
name = "fa-scraper"
version = "0.4.0"
description = "A Letterboxd-compatible FilmAffinity scraper."
license = "GPL-3.0-or-later"
authors = ["Pablo Baeyens <pbaeyens31+github@gmail.com>"]
readme = "README.md"
repository = "https://github.com/mx-psi/fa-scraper"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Environment :: Console",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/mx-psi/fa-scraper/issues"
"Changelog" = "https://github.com/mx-psi/fa-scraper/blob/master/CHANGELOG.md"
"Authors" = "https://github.com/mx-psi/fa-scraper/blob/master/AUTHORS"

[tool.poetry.scripts]
fa-scrapper = "fa_scraper.cli:main"
fa-scraper = "fa_scraper.cli:main"

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.9.1"
requests = "^2.21.0"
lxml = ">=4.5.1,<6.0.0"
arrow = "^1.2.1"

[tool.poetry.dev-dependencies]
pytest = "^8.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
