[project]
name = "fa-scraper"
version = "0.4.1"
requires-python = ">=3.9"
description = "A Letterboxd-compatible FilmAffinity scraper."
license =  { text = "GPL-3.0-or-later" }
authors = [
    { name = "Pablo Baeyens", email = "pbaeyens31+github@gmail.com" }
]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Environment :: Console",
]
dependencies = [
    "beautifulsoup4>=4.9.1, <5.0",
    "requests>=2.21.0, <3.0",
    "lxml>=4.5.1, <6.0.0",
    "arrow>=1.2.1, <2.0"
]

[project.urls]
repository = "https://github.com/mx-psi/fa-scraper"
issues = "https://github.com/mx-psi/fa-scraper/issues"
changelog = "https://github.com/mx-psi/fa-scraper/blob/main/CHANGELOG.md"
authors = "https://github.com/mx-psi/fa-scraper/blob/main/AUTHORS"

[project.scripts]
fa-scrapper = "fa_scraper.cli:main"
fa-scraper = "fa_scraper.cli:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
